feat: Add support to validate arbitrary user's role privileges against both the individual user and the groups they are a part of

--- a/config/crd/bases/validation.spectrocloud.labs_vspherevalidators.yaml
+++ b/config/crd/bases/validation.spectrocloud.labs_vspherevalidators.yaml
@@ -109,8 +109,13 @@ spec:
                   properties:
                     name:
                       type: string
+                    privileges:
+                      items:
+                        type: string
+                      type: array
                   required:
                   - name
+                  - privileges
                   type: object
                 type: array
               tagValidationRules:
