--- a/config/samples/vsphereValiator.yaml
+++ b/config/samples/vsphereValiator.yaml
@@ -30,10 +30,10 @@ spec:
   auth:
     secretName: validator-secret
   entityPrivilegeValidationRules:
-    - name: "Deploy VM to folder sp-prakash"
+    - name: "Deploy VM to vapp test-vapp"
       clusterName: "Cluster2"
-      entityName: "rp-cluster2-palette-advanced-projects"
-      entityType: "resourcepool"
+      entityName: "test-vapp"
+      entityType: "vapp"
       privileges:
       - "VirtualMachine.Config.AddExistingDisk"
       - "VirtualMachine.Config.AddNewDisk"
@@ -118,11 +118,13 @@ spec:
       entityName: "sp-prakash"
       tag: "owner"
   rolePrivilegeValidationRules:
-    - name: Cns.Searchable
-    - name: Datastore.Browse
-    - name: InventoryService.Tagging.CreateTag
-    - name: InventoryService.Tagging.EditTag
-    - name: Network.Assign
-    - name: Sessions.ValidateSession
-    - name: StorageProfile.View
-    - name: StorageViews.View
+    - name: tmpadmin@vsphere.local
+      privileges:
+        - Cns.Searchable
+        - Datastore.Browse
+        - InventoryService.Tagging.CreateTag
+        - InventoryService.Tagging.EditTag
+        - Network.Assign
+        - Sessions.ValidateSession
+        - StorageProfile.View
+        - StorageViews.View
