--- a/config/crd/bases/validation.spectrocloud.labs_vspherevalidators.yaml
+++ b/config/crd/bases/validation.spectrocloud.labs_vspherevalidators.yaml
@@ -97,25 +97,28 @@ spec:
                       items:
                         type: string
                       type: array
+                    username:
+                      type: string
                   required:
                   - entityName
                   - entityType
                   - name
                   - privileges
+                  - username
                   type: object
                 type: array
               rolePrivilegeValidationRules:
                 items:
                   properties:
-                    name:
-                      type: string
                     privileges:
                       items:
                         type: string
                       type: array
+                    username:
+                      type: string
                   required:
-                  - name
                   - privileges
+                  - username
                   type: object
                 type: array
               tagValidationRules:
