feat: Add support to validate arbitrary user's role and entity privileges instead of the one specified under auth secret (#41)
* feat: Add support to validate arbitrary user's role privileges against both the individual user and the groups they are a part of

* feat: Add support to validate arbitrary user's entity privileges instead of the one specified under auth secret

--- a/config/crd/bases/validation.spectrocloud.labs_vspherevalidators.yaml
+++ b/config/crd/bases/validation.spectrocloud.labs_vspherevalidators.yaml
@@ -97,20 +97,28 @@ spec:
                       items:
                         type: string
                       type: array
+                    username:
+                      type: string
                   required:
                   - entityName
                   - entityType
                   - name
                   - privileges
+                  - username
                   type: object
                 type: array
               rolePrivilegeValidationRules:
                 items:
                   properties:
-                    name:
+                    privileges:
+                      items:
+                        type: string
+                      type: array
+                    username:
                       type: string
                   required:
-                  - name
+                  - privileges
+                  - username
                   type: object
                 type: array
               tagValidationRules:
