--- a/chart/valid8or-plugin-vsphere/templates/auth-secret.yaml
+++ b/chart/valid8or-plugin-vsphere/templates/auth-secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.auth.createSecret }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -5,3 +6,6 @@ metadata:
 data:
   username: {{ .Values.auth.username | b64enc }}
   password: {{ .Values.auth.password | b64enc }}
+  vcenterServer: {{ .Values.auth.vcenterServer | b64enc }}
+  insecureSkipVerify: {{ .Values.auth.insecureSkipVerify | b64enc }}
+{{- end }}
