--- a/chart/valid8or-plugin-vsphere/values.yaml
+++ b/chart/valid8or-plugin-vsphere/values.yaml
@@ -52,7 +52,8 @@ metricsService:
     targetPort: https
   type: ClusterIP
 auth:
-  secretName: vsphere-creds
+  secretName: vsphere-credentials
+  createSecret: true
   username: ""
   password: ""
   vcenterServer: ""
