fix: better handling for edge cases with resource pools

--- a/config/samples/vsphereValiator.yaml
+++ b/config/samples/vsphereValiator.yaml
@@ -15,7 +15,7 @@ spec:
     - name: "rp-cluster2-palette-advanced-projects check resources"
       clusterName: Cluster2
       scope: resourcepool
-      entityName: "rp-cluster2-palette-advanced-projects"
+      entityName: "Resources"
       nodepoolResourceRequirements:
         - name: master-pool
           numberOfNodes: 3
@@ -33,91 +33,22 @@ spec:
     - name: "Deploy VM to vapp test-vapp"
       username: prakash@vsphere.local
       clusterName: "Cluster2"
-      entityName: "rp-cluster2-palette-advanced-projects"
-      entityType: "resourcepool"
+      entityName: "ubuntu-test-mig"
+      entityType: "vm"
       privileges:
       - "VirtualMachine.Config.AddExistingDisk"
       - "VirtualMachine.Config.AddNewDisk"
-      - "VirtualMachine.Config.AdvancedConfig"
-      - "VirtualMachine.Config.Annotation"
-      - "VirtualMachine.Config.CPUCount"
-      - "VirtualMachine.Config.ChangeTracking"
-      - "VirtualMachine.Config.DiskExtend"
-      - "VirtualMachine.Config.DiskLease"
-      - "VirtualMachine.Config.EditDevice"
-      - "VirtualMachine.Config.HostUSBDevice"
-      - "VirtualMachine.Config.ManagedBy"
-      - "VirtualMachine.Config.Memory"
-      - "VirtualMachine.Config.MksControl"
-      - "VirtualMachine.Config.QueryFTCompatibility"
-      - "VirtualMachine.Config.QueryUnownedFiles"
-      - "VirtualMachine.Config.RawDevice"
-      - "VirtualMachine.Config.ReloadFromPath"
-      - "VirtualMachine.Config.RemoveDisk"
-      - "VirtualMachine.Config.Rename"
-      - "VirtualMachine.Config.ResetGuestInfo"
-      - "VirtualMachine.Config.Resource"
-      - "VirtualMachine.Config.Settings"
-      - "VirtualMachine.Config.SwapPlacement"
-      - "VirtualMachine.Config.ToggleForkParent"
-      - "VirtualMachine.Config.UpgradeVirtualHardware"
-      - "VirtualMachine.GuestOperations.Execute"
-      - "VirtualMachine.GuestOperations.Modify"
-      - "VirtualMachine.GuestOperations.ModifyAliases"
-      - "VirtualMachine.GuestOperations.Query"
-      - "VirtualMachine.GuestOperations.QueryAliases"
-      - "VirtualMachine.Hbr.ConfigureReplication"
-      - "VirtualMachine.Hbr.MonitorReplication"
-      - "VirtualMachine.Hbr.ReplicaManagement"
-      - "VirtualMachine.Interact.Backup"
-      - "VirtualMachine.Interact.ConsoleInteract"
-      - "VirtualMachine.Interact.DeviceConnection"
-      - "VirtualMachine.Interact.PowerOff"
-      - "VirtualMachine.Interact.PowerOn"
-      - "VirtualMachine.Interact.PutUsbScanCodes"
-      - "VirtualMachine.Interact.SetCDMedia"
-      - "VirtualMachine.Interact.SetFloppyMedia"
-      - "VirtualMachine.Inventory.Create"
-      - "VirtualMachine.Inventory.CreateFromExisting"
-      - "VirtualMachine.Inventory.Delete"
-      - "VirtualMachine.Inventory.Move"
-      - "VirtualMachine.Inventory.Register"
-      - "VirtualMachine.Inventory.Unregister"
-      - "VirtualMachine.Namespace.Event"
-      - "VirtualMachine.Namespace.EventNotify"
-      - "VirtualMachine.Namespace.Management"
-      - "VirtualMachine.Namespace.ModifyContent"
-      - "VirtualMachine.Namespace.Query"
-      - "VirtualMachine.Namespace.ReadContent"
-      - "VirtualMachine.Provisioning.Clone"
-      - "VirtualMachine.Provisioning.CloneTemplate"
-      - "VirtualMachine.Provisioning.CreateTemplateFromVM"
-      - "VirtualMachine.Provisioning.Customize"
-      - "VirtualMachine.Provisioning.DeployTemplate"
-      - "VirtualMachine.Provisioning.DiskRandomAccess"
-      - "VirtualMachine.Provisioning.DiskRandomRead"
-      - "VirtualMachine.Provisioning.FileRandomAccess"
-      - "VirtualMachine.Provisioning.GetVmFiles"
-      - "VirtualMachine.Provisioning.MarkAsTemplate"
-      - "VirtualMachine.Provisioning.MarkAsVM"
-      - "VirtualMachine.Provisioning.ModifyCustSpecs"
-      - "VirtualMachine.Provisioning.PromoteDisks"
-      - "VirtualMachine.Provisioning.PutVmFiles"
-      - "VirtualMachine.Provisioning.ReadCustSpecs"
-      - "VirtualMachine.State.CreateSnapshot"
-      - "VirtualMachine.State.RemoveSnapshot"
-      - "VirtualMachine.State.RenameSnapshot"
-      - "VirtualMachine.State.RevertToSnapshot"
   tagValidationRules:
     - name: "Datacenter k8s-region tag validation"
-      entityType: "vm"
-      entityName: "ubuntu-test-mig-multi-disk"
-      tag: "owner"
-    - name: "Folder tag validation"
+      entityType: "resourcepool"
+      entityName: "Resources"
       clusterName: "Cluster2"
-      entityType: "folder"
-      entityName: "sp-prakash"
       tag: "owner"
+#    - name: "Folder tag validation"
+#      clusterName: "Cluster2"
+#      entityType: "folder"
+#      entityName: "sp-prakash"
+#      tag: "owner"
   rolePrivilegeValidationRules:
     - username: tmpadmin@vsphere.local
       privileges:
