fix: Better handle datacenter level hosts

--- a/config/samples/vsphereValiator.yaml
+++ b/config/samples/vsphereValiator.yaml
@@ -32,7 +32,7 @@ spec:
   entityPrivilegeValidationRules:
     - name: "Deploy VM to vapp test-vapp"
       username: prakash@vsphere.local
-      clusterName: "Cluster2"
+#      clusterName: "Cluster2"
       entityName: "ubuntu-test-mig"
       entityType: "vm"
       privileges:
