--- a/config/crd/bases/validation.spectrocloud.labs_vspherevalidators.yaml
+++ b/config/crd/bases/validation.spectrocloud.labs_vspherevalidators.yaml
@@ -107,6 +107,22 @@ spec:
                   - username
                   type: object
                 type: array
+              ntpValidationRules:
+                items:
+                  properties:
+                    clusterName:
+                      type: string
+                    hosts:
+                      items:
+                        type: string
+                      type: array
+                    name:
+                      type: string
+                  required:
+                  - hosts
+                  - name
+                  type: object
+                type: array
               rolePrivilegeValidationRules:
                 items:
                   properties:
@@ -143,11 +159,7 @@ spec:
                 type: array
             required:
             - auth
-            - computeResourceRules
             - datacenter
-            - entityPrivilegeValidationRules
-            - rolePrivilegeValidationRules
-            - tagValidationRules
             type: object
           status:
             description: VsphereValidatorStatus defines the observed state of VsphereValidator
