refactor: valid8or -> validator
Signed-off-by: Tyler Gillson <tyler.gillson@gmail.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -66,8 +66,8 @@ jobs:
       packages: write
       id-token: write
     env:
-      IMAGE_TAG: quay.io/spectrocloud-labs/valid8or-plugin-vsphere:${{ needs.release-please.outputs.tag_name }}
-      IMAGE_NAME: valid8or-plugin-vsphere
+      IMAGE_TAG: quay.io/spectrocloud-labs/validator-plugin-vsphere:${{ needs.release-please.outputs.tag_name }}
+      IMAGE_NAME: validator-plugin-vsphere
     steps:
       - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
