--- a/chart/validator-plugin-vsphere/templates/deployment.yaml
+++ b/chart/validator-plugin-vsphere/templates/deployment.yaml
@@ -4,8 +4,8 @@ metadata:
   name: {{ include "chart.fullname" . }}-controller-manager
   labels:
     app.kubernetes.io/component: manager
-    app.kubernetes.io/created-by: valid8or-plugin-vsphere
-    app.kubernetes.io/part-of: valid8or-plugin-vsphere
+    app.kubernetes.io/created-by: validator-plugin-vsphere
+    app.kubernetes.io/part-of: validator-plugin-vsphere
     control-plane: controller-manager
   {{- include "chart.labels" . | nindent 4 }}
 spec:
