--- a/chart/validator-plugin-vsphere/templates/metrics-reader-rbac.yaml
+++ b/chart/validator-plugin-vsphere/templates/metrics-reader-rbac.yaml
@@ -4,8 +4,8 @@ metadata:
   name: {{ include "chart.fullname" . }}-metrics-reader
   labels:
     app.kubernetes.io/component: kube-rbac-proxy
-    app.kubernetes.io/created-by: valid8or-plugin-vsphere
-    app.kubernetes.io/part-of: valid8or-plugin-vsphere
+    app.kubernetes.io/created-by: validator-plugin-vsphere
+    app.kubernetes.io/part-of: validator-plugin-vsphere
   {{- include "chart.labels" . | nindent 4 }}
 rules:
 - nonResourceURLs:
