--- a/chart/validator-plugin-vsphere/templates/proxy-rbac.yaml
+++ b/chart/validator-plugin-vsphere/templates/proxy-rbac.yaml
@@ -4,8 +4,8 @@ metadata:
   name: {{ include "chart.fullname" . }}-proxy-role
   labels:
     app.kubernetes.io/component: kube-rbac-proxy
-    app.kubernetes.io/created-by: valid8or-plugin-vsphere
-    app.kubernetes.io/part-of: valid8or-plugin-vsphere
+    app.kubernetes.io/created-by: validator-plugin-vsphere
+    app.kubernetes.io/part-of: validator-plugin-vsphere
   {{- include "chart.labels" . | nindent 4 }}
 rules:
 - apiGroups:
@@ -27,8 +27,8 @@ metadata:
   name: {{ include "chart.fullname" . }}-proxy-rolebinding
   labels:
     app.kubernetes.io/component: kube-rbac-proxy
-    app.kubernetes.io/created-by: valid8or-plugin-vsphere
-    app.kubernetes.io/part-of: valid8or-plugin-vsphere
+    app.kubernetes.io/created-by: validator-plugin-vsphere
+    app.kubernetes.io/part-of: validator-plugin-vsphere
   {{- include "chart.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
