--- a/chart/validator-plugin-vsphere/templates/serviceaccount.yaml
+++ b/chart/validator-plugin-vsphere/templates/serviceaccount.yaml
@@ -4,8 +4,8 @@ metadata:
   name: {{ include "chart.fullname" . }}-controller-manager
   labels:
     app.kubernetes.io/component: rbac
-    app.kubernetes.io/created-by: valid8or-plugin-vsphere
-    app.kubernetes.io/part-of: valid8or-plugin-vsphere
+    app.kubernetes.io/created-by: validator-plugin-vsphere
+    app.kubernetes.io/part-of: validator-plugin-vsphere
   {{- include "chart.labels" . | nindent 4 }}
   annotations:
     {{- toYaml .Values.controllerManager.serviceAccount.annotations | nindent 4 }}
