--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -6,8 +6,8 @@ metadata:
     app.kubernetes.io/name: namespace
     app.kubernetes.io/instance: system
     app.kubernetes.io/component: manager
-    app.kubernetes.io/created-by: valid8or-plugin-vsphere
-    app.kubernetes.io/part-of: valid8or-plugin-vsphere
+    app.kubernetes.io/created-by: validator-plugin-vsphere
+    app.kubernetes.io/part-of: validator-plugin-vsphere
     app.kubernetes.io/managed-by: kustomize
   name: system
 ---
@@ -21,8 +21,8 @@ metadata:
     app.kubernetes.io/name: deployment
     app.kubernetes.io/instance: controller-manager
     app.kubernetes.io/component: manager
-    app.kubernetes.io/created-by: valid8or-plugin-vsphere
-    app.kubernetes.io/part-of: valid8or-plugin-vsphere
+    app.kubernetes.io/created-by: validator-plugin-vsphere
+    app.kubernetes.io/part-of: validator-plugin-vsphere
     app.kubernetes.io/managed-by: kustomize
 spec:
   selector:
