--- a/config/prometheus/monitor.yaml
+++ b/config/prometheus/monitor.yaml
@@ -8,8 +8,8 @@ metadata:
     app.kubernetes.io/name: servicemonitor
     app.kubernetes.io/instance: controller-manager-metrics-monitor
     app.kubernetes.io/component: metrics
-    app.kubernetes.io/created-by: valid8or-plugin-vsphere
-    app.kubernetes.io/part-of: valid8or-plugin-vsphere
+    app.kubernetes.io/created-by: validator-plugin-vsphere
+    app.kubernetes.io/part-of: validator-plugin-vsphere
     app.kubernetes.io/managed-by: kustomize
   name: controller-manager-metrics-monitor
   namespace: system
