--- a/config/samples/validation_v1alpha1_vspherevalidator.yaml
+++ b/config/samples/validation_v1alpha1_vspherevalidator.yaml
@@ -4,9 +4,9 @@ metadata:
   labels:
     app.kubernetes.io/name: vspherevalidator
     app.kubernetes.io/instance: vspherevalidator-sample
-    app.kubernetes.io/part-of: valid8or-plugin-vsphere
+    app.kubernetes.io/part-of: validator-plugin-vsphere
     app.kubernetes.io/managed-by: kustomize
-    app.kubernetes.io/created-by: valid8or-plugin-vsphere
+    app.kubernetes.io/created-by: validator-plugin-vsphere
   name: vspherevalidator-sample
 spec:
   # TODO(user): Add fields here
