chore: Add validation for required auth secret fields and add option to supply serviceAccountName in values.yaml

--- a/chart/validator-plugin-vsphere/templates/deployment.yaml
+++ b/chart/validator-plugin-vsphere/templates/deployment.yaml
@@ -65,5 +65,9 @@ spec:
           | nindent 10 }}
       securityContext:
         runAsNonRoot: true
+      {{- if .Values.auth.serviceAccountName }}
+      serviceAccountName: {{ .Values.auth.serviceAccountName }}
+      {{- else }}
       serviceAccountName: {{ include "chart.fullname" . }}-controller-manager
+      {{- end }}
       terminationGracePeriodSeconds: 10
