refactor: remove auth secret creation
Signed-off-by: Tyler Gillson <tyler.gillson@gmail.com>

--- a/chart/validator-plugin-vsphere/values.yaml
+++ b/chart/validator-plugin-vsphere/values.yaml
@@ -52,9 +52,6 @@ metricsService:
     targetPort: https
   type: ClusterIP
 auth:
+  # Specify the name of a secret in your cluster that contains vSphere credentials.
+  # E.g.: https://github.com/spectrocloud-labs/validator/blob/main/chart/validator/templates/plugin-secret-vsphere.yaml
   secretName: vsphere-credentials
-  createSecret: true
-  username: ""
-  password: ""
-  vcenterServer: ""
-  insecureSkipVerify: ""
