--- a/config/samples/vsphere-validator.yaml
+++ b/config/samples/vsphere-validator.yaml
@@ -15,7 +15,7 @@ spec:
 #    - name: "rp-cluster2-palette-advanced-projects check resources"
 #      clusterName: Cluster2
 #      scope: resourcepool
-#      entityName: "Resources"
+#      entityName: "rp-cluster2-palette-advanced-projects"
 #      nodepoolResourceRequirements:
 #        - name: master-pool
 #          numberOfNodes: 3
@@ -28,27 +28,28 @@ spec:
 #          memory: 8Gi
 #          diskSpace: 100Gi
   auth:
+    implicit: false
     secretName: validator-secret
-  entityPrivilegeValidationRules:
-    - name: "Deploy VM to vapp test-vapp"
-      username: prakash@vsphere.local
-#      clusterName: "Cluster2"
-      entityName: "sp-prakash"
-      entityType: "folder"
-      privileges:
-      - "VirtualMachine.Config.AddExistingDisk"
-      - "VirtualMachine.Config.AddNewDisk"
-#  tagValidationRules:
-#    - name: "Datacenter k8s-region tag validation"
-#      entityType: "resourcepool"
-#      entityName: "Resources"
-#      clusterName: "Cluster2"
-#      tag: "owner"
-##    - name: "Folder tag validation"
+#  entityPrivilegeValidationRules:
+#    - name: "Deploy VM to vapp test-vapp"
+#      username: prakash@vsphere.local
 ##      clusterName: "Cluster2"
-##      entityType: "folder"
-##      entityName: "sp-prakash"
-##      tag: "owner"
+#      entityName: "sp-prakash"
+#      entityType: "folder"
+#      privileges:
+#      - "VirtualMachine.Config.AddExistingDisk"
+#      - "VirtualMachine.Config.AddNewDisk"
+  tagValidationRules:
+    - name: "Datacenter k8s-region tag validation"
+      entityType: "datacenter"
+      entityName: "Datacenter"
+#      clusterName: "Cluster2"
+      tag: "k8s-region"
+    - name: "Folder tag validation"
+      clusterName: "Cluster2"
+      entityType: "folder"
+      entityName: "sp-prakash"
+      tag: "owner"
 #  rolePrivilegeValidationRules:
 #    - username: tmpadmin@vsphere.local
 #      privileges:
